--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -20,20 +20,21 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.56"
 
 [dependencies]
-aead = { version = "0.4", default-features = false }
+aead = { version = "=0.5.0-pre.2", default-features = false }
 cipher = "0.3"
 cmac = "0.6"
 ctr = "0.8"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.4", features = ["dev"], default-features = false }
-aes = { version = "0.7", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
+aead = { version = "=0.5.0-pre.2", features = ["dev"], default-features = false }
+aes = "0.7"
 
 [features]
 default = ["alloc"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
+getrandom  = ["aead/getrandom"]
 heapless = ["aead/heapless"]
 stream = ["aead/stream"]
 
