--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -21,7 +21,7 @@ categories = ["cryptography", "no-std"]
 aead = { version = "=0.5.0-pre.2", default-features = false }
 chacha20 = { version = "0.9", features = ["zeroize"] }
 cipher = "0.4"
-poly1305 = "0.7"
+poly1305 = "=0.8.0-pre.1"
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
