--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.56"
 
 [dependencies]
-aead = "=0.5.0-pre.2"
+aead = "0.5"
 aes = "0.8"
 cipher = "0.4"
 cmac = "0.7"
