--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -18,14 +18,14 @@ keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "=0.5.0-pre.2", default-features = false }
+aead = { version = "0.5", default-features = false }
 chacha20 = { version = "0.9", features = ["zeroize"] }
 cipher = "0.4"
 poly1305 = "=0.8.0-pre.1"
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
-aead = { version = "=0.5.0-pre.2", features = ["dev"], default-features = false }
+aead = { version = "0.5", features = ["dev"], default-features = false }
 
 [features]
 default = ["alloc"]
