--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -30,7 +30,7 @@ aead = { version = "0.5", features = ["dev"], default-features = false }
 hex-literal = "0.3"
 
 [features]
-default   = ["aes", "alloc"]
+default   = ["aes", "alloc", "getrandom"]
 std       = ["aead/std", "alloc"]
 alloc     = ["aead/alloc"]
 getrandom = ["aead/getrandom"]
