--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -25,7 +25,7 @@ aes = { version = "0.8.1" }
 hex-literal = "0.3.4"
 
 [features]
-default = ["alloc"]
+default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 getrandom  = ["aead/getrandom"]
