--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -28,7 +28,7 @@ zeroize = { version = "1", default-features = false }
 aead = { version = "0.5", features = ["dev"], default-features = false }
 
 [features]
-default       = ["alloc"]
+default       = ["alloc", "getrandom"]
 std           = ["aead/std", "alloc"]
 alloc         = ["aead/alloc"]
 getrandom     = ["aead/getrandom"]
