--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -19,16 +19,16 @@ rust-version = "1.56"
 aead = { version = "0.5", default-features = false }
 salsa20 = { version = "0.10", features = ["zeroize"] }
 poly1305 = "=0.8.0-pre.2"
-rand_core = { version = "0.6", optional = true }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [features]
-default = ["alloc", "rand_core", "aead/rand_core"]
-std = ["aead/std", "alloc", "rand_core/std"]
+default = ["alloc", "getrandom"]
+std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
-getrandom  = ["aead/getrandom"]
+getrandom  = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
 stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
