--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -33,6 +33,7 @@ std           = ["aead/std", "alloc"]
 alloc         = ["aead/alloc"]
 getrandom     = ["aead/getrandom"]
 heapless      = ["aead/heapless"]
+rand_core     = ["aead/rand_core"]
 reduced-round = []
 stream        = ["aead/stream"]
 
