--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -33,6 +33,7 @@ hex-literal = "0.3"
 default   = ["aes", "alloc", "getrandom"]
 std       = ["aead/std", "alloc"]
 alloc     = ["aead/alloc"]
+arrayvec  = ["aead/arrayvec"]
 getrandom = ["aead/getrandom", "rand_core"]
 heapless  = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
