--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -37,6 +37,7 @@ hex-literal = "0.3"
 default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
 getrandom  = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
