--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -28,6 +28,7 @@ hex-literal = "0.3.4"
 default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
 getrandom  = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
