--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -21,10 +21,7 @@ jobs:
         with:
           toolchain: stable
           components: rustfmt
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+      - run: cargo fmt --all -- --check
   clippy:
     runs-on: ubuntu-latest
     steps:
