--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "aes-gcm",
     "aes-gcm-siv",
     "aes-siv",
+    "ascon-aead",
     "ccm",
     "chacha20poly1305",
     "deoxys",
