--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -7,7 +7,7 @@ authors = [
     "RustCrypto Developers",
 ]
 edition = "2021"
-license = "MIT"
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["AEAD", "ascon", "encryption"]
