--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -15,6 +15,7 @@ criterion = "0.4.0"
 aes = "0.8.2"
 aes-gcm = { path = "../aes-gcm/" }
 aes-gcm-siv = { path = "../aes-gcm-siv/" }
+ascon-aead = { path = "../ascon-aead/" }
 chacha20poly1305 = { path = "../chacha20poly1305/" }
 deoxys = { path = "../deoxys/" }
 eax = { path = "../eax/" }
@@ -30,6 +31,11 @@ harness = false
 [[bench]]
 name = "aes-gcm-siv"
 path = "src/aes-gcm-siv.rs"
+harness = false
+
+[[bench]]
+name = "ascon-aead"
+path = "src/ascon-aead.rs"
 harness = false
 
 [[bench]]
