--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -28,7 +28,7 @@ aead = { version = "0.5", features = ["alloc"] }
 spectral = { version = "0.6", default-features = false }
 
 [features]
-default = ["zeroize", "alloc"]
+default = ["alloc", "getrandom", "zeroize"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
