xsalsa20poly1305: deprecate in favor of `crypto_secretbox`
The `crypto_secretbox` crate is forked from `xsalsa20poly1305`, but
modified and expanded to support the libsodium flavor of
XChaCha20Poly1305 in addition to XSalsa20Poly1305.

Further updates will happen on `crypto_secretbox`:

https://github.com/RustCrypto/nacl-compat/tree/master/crypto_secretbox

--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
 name = "xsalsa20poly1305"
 version = "0.9.0"
-description = """
-Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
-authenticated encryption algorithm
-"""
+description = "DEPRECATED: please use the `crypto_secretbox` crate"
 authors = ["RustCrypto Developers"]
 edition = "2021"
 license = "Apache-2.0 OR MIT"
