--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -23,9 +23,8 @@ zeroize = { version = "1.6", optional = true, default-features = false, features
 ascon = "0.4"
 
 [dev-dependencies]
-hex = "0.4"
+hex-literal = "0.3"
 aead = { version = "0.5", features = ["alloc"] }
-spectral = { version = "0.6", default-features = false }
 
 [features]
 default = ["alloc", "getrandom", "zeroize"]
