--- a/committing-aead/Cargo.toml
+++ b/committing-aead/Cargo.toml
@@ -25,6 +25,12 @@ subtle = { version = "2.5", default-features = false }
 digest = { version = "0.10.7", features = ["mac"] }
 hmac = { version = "0.12.1" }
 
+[dev-dependencies]
+aes-gcm = { path = "../aes-gcm", version = "0.10.3" }
+# Don't use hex-literal v0.4 to reduce multiple dependency versiou duplication
+hex-literal = "0.3.4"
+sha2 = "0.10.8"
+
 [features]
 default = ["std"]
 alloc = ["aead/alloc"]
