--- a/committing-aead/Cargo.toml
+++ b/committing-aead/Cargo.toml
@@ -27,7 +27,8 @@ hmac = { version = "0.12.1" }
 
 [dev-dependencies]
 aes-gcm = { path = "../aes-gcm", version = "0.10.3" }
-# Don't use hex-literal v0.4 to reduce multiple dependency versiou duplication
+chacha20poly1305 = { path = "../chacha20poly1305", version = "0.10.1" }
+# Don't use hex-literal v0.4 to reduce multiple dependency version duplication
 hex-literal = "0.3.4"
 sha2 = "0.10.8"
 
