--- a/committing-aead/Cargo.toml
+++ b/committing-aead/Cargo.toml
@@ -26,11 +26,11 @@ digest = { version = "0.10.7", features = ["mac"] }
 hmac = { version = "0.12.1" }
 
 [dev-dependencies]
-aes-gcm = { path = "../aes-gcm", version = "0.10.3" }
-chacha20poly1305 = { path = "../chacha20poly1305", version = "0.10.1" }
+aes-gcm = { path = "../aes-gcm", version = "0.10.3", default-features = false, features = ["aes"] }
+chacha20poly1305 = { path = "../chacha20poly1305", version = "0.10.1", default-features = false }
 # Don't use hex-literal v0.4 to reduce multiple dependency version duplication
 hex-literal = "0.3.4"
-sha2 = "0.10.8"
+sha2 = { version = "0.10.8", default-features = false }
 
 [features]
 default = ["std"]
