--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -17,7 +17,6 @@ rust-version = "1.56"
 
 [dependencies]
 aead = { version = "0.5", default-features = false }
-aes = { version = "0.8", optional = true }
 cipher = "0.4"
 ctr = "0.9"
 subtle = { version = "2", default-features = false }
@@ -25,10 +24,11 @@ zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.5", features = ["dev"], default-features = false }
+aes = { version = "0.8", default-features = false }
 hex-literal = "0.3"
 
 [features]
-default   = ["aes", "alloc", "getrandom"]
+default   = ["alloc", "getrandom"]
 std       = ["aead/std", "alloc"]
 alloc     = ["aead/alloc"]
 arrayvec  = ["aead/arrayvec"]
