--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -13,18 +13,18 @@ documentation = "https://docs.rs/ocb3"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "encryption", "ocb"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.60"
+rust-version = "1.72"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-cipher = "0.4"
-ctr = "0.9"
+aead = { version = "=0.6.0-pre.0", default-features = false }
+cipher = "=0.5.0-pre.4"
+ctr = "=0.10.0-pre"
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
-aes = { version = "0.8", default-features = false }
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
+aes = { version = "=0.9.0-pre", default-features = false }
 hex-literal = "0.4"
 
 [features]
